# ComfyUI-Video-As-Prompt

./: .gitignore  README.md  __init__.py  node.py  pyproject.toml  requirements.txt  train.py
diffusers_vap/: __init__.py
diffusers_vap/models/: __init__.py  attention_processor.py  embeddings.py  modeling_outputs.py
diffusers_vap/models/transformers/: __init__.py  cogvideox_transformer_3d.py  cogvideox_transformer_3d_mot.py  transformer_wan_mot.py
diffusers_vap/pipelines/: __init__.py  pipeline_flax_utils.py  pipeline_loading_utils.py  pipeline_utils.py
diffusers_vap/pipelines/cogvideo/: __init__.py  pipeline_cogvideox_image2video_mot.py
diffusers_vap/pipelines/wan/: __init__.py  pipeline_wan_i2v_mot.py
examples/: vap_simple_example.json
infer/: cog_vap.py  cog_vap_bench.py  wan_vap.py  wan_vap_bench.py
