[project]
name = "ComfyUI-Video-As-Prompt"
description = "This repository provides ComfyUI custom nodes to run WAN Video-As-Prompt (VAP)."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = [
    "accelerate",
    "av",
    "bitsandbytes",
    "datasets",
    "decord",
    "deepspeed",
    "diffusers",
    "ftfy",
    "hf_transfer",
    "huggingface_hub",
    "imageio",
    "imageio-ffmpeg",
    "kornia",
    "matplotlib",
    "numpy",
    "nvitop",
    "opencv-python",
    "pandas",
    "peft",
    "qwen-vl-utils[decord]",
    "ruff",
    "sentencepiece",
    "torch",
    "torchao",
    "torchdata",
    "torchvision",
    "transformers",
    "wandb",
]

[project.urls]
Repository = "https://github.com/okdalto/ComfyUI-Video-As-Prompt"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/okdalto/ComfyUI-Video-As-Prompt/wiki"
"Bug Tracker" = "https://github.com/okdalto/ComfyUI-Video-As-Prompt/issues"

[tool.comfy]
PublisherId = "seonghyeon"
DisplayName = "ComfyUI-Video-As-Prompt"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility
